--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -1,64 +1,67 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  &:before{
-    content:'';
-    content: "";
-    width: 100%;
-    height: 100vh;
-    //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    //background: #D3D3D3;
-    background-image: url("../public/bg.jpg");
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: -1;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
-
-.text-shadow{
-  text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
-}
-
-.adjacent-post{
-  & .arrow-btn{
-    transition: width 300ms ease;
-    width: 50px;
-  }
-  &:hover{
-    & .arrow-btn{
-      width: 60px;
-    }
-  }
-}
-
-.react-multi-carousel-list {
-  & .arrow-btn{
-    transition: width 300ms ease;
-    width: 50px;
-    &:hover{
-      width: 60px;
-    }
-  }
-  
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  color: rgb(50, 50, 50);
+}
+
+body {
+  margin: 0% 25%;
+  font-family: "Roboto", sans-serif;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 1rem 0rem;
+  font-weight: bold;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p,
+li {
+  line-height: 1.5rem;
+  font-family: "Roboto Slab", serif;
+  padding: 1rem 0rem;
+  font-size: 1.1rem;
+}
+
+ol,
+ul {
+  padding-left: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0% 0%;
+  }
+  nav {
+    padding: 3rem 0rem;
+  }
 }
