--- a/styles/BlogCard.module.css
+++ b/styles/BlogCard.module.css
@@ -11,9 +11,10 @@
   font-size: 1rem;
 }
 
-.imgContainer img {
+.imgContainer {
+  position: relative;
   width: 100%;
-  height: 25vh;
+  height: 20vh;
 }
 
 .card img:hover {
